--- a/社工库.md
+++ b/社工库.md
@@ -2,7 +2,7 @@
 
 - 前端：Vue+Element Plus
 - 后端：Python+flask
-- 数据库：
+- 数据库：Mysql
 
 ## 项目文件结构
 
@@ -17,6 +17,8 @@
 - fake_csv.py：生成csv格式的假数据，测试使用。
 - parser.py：解析器文件，主要是使用`whoosh`对于txt文件进行操作，但也整合了es文件中对于csv和excel的处理，形成一个完整的处理器。
 - preprocess.py：包括一些预处理操作供其他文件调用。主要包括：文件编码的检测、excel到csv文件的转换、去除字符串中的空白符以及文件目录操作。
+- mysql.py：主要是csv和excel格式数据的数据库导入和查询操作。
+- requirements.py：python的依赖库
 
 ## 实现思路
 
@@ -24,15 +26,17 @@
 
 csv文件通过导入elasticsearch中建立索引进行查询。主要在`ex.py`文件中实现，通过读取第一行确定各列的字段信息，从而建立索引。
 
+csv也会根据头部字段自动根据文件名在相应的数据库中建表。
+
 ### excel文件的处理
 
 excel文件主要通过将一个文件中的各个表单独转化为不同的csv文件，按照csv处理方式进行建立索引和查询操作。
 
+excel同csv可根据头部字段自动建表。
+
 ### txt文件的处理
 
 txt文件的处理有别于上述两种类型的文件，txt主要是对每一行看作一个整体，然后一行一行的建立索引，这里遇到了编码问题，在读取文件时会遇到失败的情况，这种情况会在之后的亮点处理介绍。
-
-### 数据库文件的处理
 
 ## 亮点处理
 
